--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   smooth_page_indicator: ^1.1.0
   animated_bottom_navigation_bar: ^1.3.3
+  typewritertext: ^3.0.3
 
 dev_dependencies:
   flutter_test:
