--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   dotted_border: ^2.1.0
   page_transition: ^2.1.0
   lottie: ^3.1.0
+  holding_gesture: ^1.2.0
 
 dev_dependencies:
   flutter_test:
