--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   page_transition: ^2.1.0
   lottie: ^3.1.0
   holding_gesture: ^1.2.0
+  awesome_snackbar_content: ^0.1.3
   firebase_core: ^2.31.1
   firebase_auth: ^4.19.6
 
