--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   lottie: ^3.1.0
   holding_gesture: ^1.2.0
   awesome_snackbar_content: ^0.1.3
+  speech_to_text: ^6.6.1
   firebase_core: ^2.31.1
   firebase_auth: ^4.19.6
 
